# homecloud

./: .envrc  .gitmodules  Brewfile  pyproject.toml
ansible/: .envrc  .gitignore  ansible.mk  requirements.yml
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/handlers/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/bootstrap/templates/: hosts.j2
docker/: docker.mk
nomad/: .envrc  Makefile  docker-compose.yml  main.yml  requirements.yml
nomad/group_vars/: consul.yml  nomad.yml
nomad/inventory/: development
ubuntu/base/: Dockerfile
